# holdem

./: CMakeUserPresets.json
apps/: CMakeLists.txt  preflopstrengths.cpp
src/: Action.h  CMakeLists.txt  Hand.h  HandRange.cpp  HandRange.h  HoldemHand.cpp  HoldemHand.h  RatedHand.cpp  RatedHand.h
tests/: CMakeLists.txt  CardTests.cpp  ClassifiedHandTests.cpp  DealerTests.cpp  HoldemHandTests.cpp
